--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
             "guzzlehttp/guzzle": "~6.0",
             "monolog/monolog": "1.0.*",
                 "twig/twig": "~1.0",
-                "twbs/bootstrap": "^3.3"
+                "twbs/bootstrap": "^3.3",
+                "slim/slim": "^3.5",
+                "slim/views": "^0.1.3",
+                "slim/php-view": "^2.1"
         }
     }
