--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
                 "twbs/bootstrap": "^3.3",
                 "slim/slim": "^3.5",
                 "slim/views": "^0.1.3",
-                "slim/php-view": "^2.1"
+                "slim/php-view": "^2.1",
+                "mgp25/instagram-php": "v1.5.0.1"
         }
     }
