--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
                 "slim/slim": "^3.5",
                 "slim/views": "^0.1.3",
                 "slim/php-view": "^2.1",
-                "mgp25/instagram-php": "v1.5.0.1"
+                "mgp25/instagram-php": "v1.5.0.1",
+                "bryanjhv/slim-session": "~3.0",
+                "akrabat/rka-slim-session-middleware": "^2.0"
         }
     }
